added the flip cards

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ VERSION : 1.1
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/responsive.css">
   <link rel="stylesheet" type="text/css" href="css/color/rose.css">
+  <link rel="stylesheet" href="css/hover.css">
 
 </head>
 
@@ -122,7 +123,7 @@ VERSION : 1.1
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center black">
-            <h3 class="title">ABOUT <span class="themecolor">US</span></h3>
+            <h3 class="title">Who we <span class="themecolor">are</span></h3>
             <p class="a-slog">Lorem ipsum dolor sit amet ne onsectetuer adipiscing elit. Aenean commodo ligula eget
               dolor in tashin ty</p>
           </div>
@@ -169,6 +170,79 @@ VERSION : 1.1
  ============================================================================================================================-->
 
 
+    <body class="body2">
+      <!-- horizontal -->
+
+      <h4>...</h4>
+      <div class="flip">
+        <div class="front"
+          style="background-image: url(https://images.pexels.com/photos/540518/pexels-photo-540518.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb)">
+          <h1 class="text-shadow">Integrity</hi>
+        </div>
+        <div class="back">
+          <h2><br></h2>
+          <p>
+            <ul>
+              <li>Being open and transparent</li>
+              <li>Giving respects in all aspects</li>
+            </ul>
+          </p>
+        </div>
+      </div>
+      <div class="flip">
+        <div class="front"
+          style="background-image: url(https://images.pexels.com/photos/414171/pexels-photo-414171.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb)">
+          <h1 class="text-shadow">Innovative</hi>
+        </div>
+        <div class="back">
+          <h2><br></h2>
+          <p>
+            <ul>
+              <li>Fresh with new ideas</li>
+              <li>Bringing new ideas to life</li>
+            </ul>
+          </p>
+        </div>
+      </div>
+      <div class="flip">
+        <div class="front"
+          style="background-image: url(https://images.pexels.com/photos/36717/amazing-animal-beautiful-beautifull.jpg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb)">
+          <h1 class="text-shadow">Efficiency</hi>
+        </div>
+        <div class="back">
+          <h2><br></h2>
+          <p>
+            <ul>
+              <li>Being resourceful</li>
+              <li>Doing things right</li>
+            </ul>
+          </p>
+        </div>
+      </div>
+
+      <br>
+      <br>
+
+      <!-- vertical -->
+
+      <h4>...</h4>
+      <div class="flip flip-vertical">
+        <div class="front"
+          style="background-image: url(https://images.pexels.com/photos/38136/pexels-photo-38136.jpeg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb)">
+          <h1 class="text-shadow">User Story Centered</hi>
+        </div>
+        <div class="back">
+          <h2><br></h2>
+          <p>
+            <ul>
+              <li>Being empathetic to users needs</li>
+              <li>Inspiring greater imagination</li>
+            </ul>
+          </p>
+        </div>
+      </div>
+    </body>
+
 
     <!-- [RECENT-WORKS]
  ============================================================================================================================-->
@@ -176,7 +250,7 @@ VERSION : 1.1
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h3 class="title">Recent <span class="themecolor">Works</span></h3>
+            <h3 class="title">We <span class="themecolor">Offer</span></h3>
             <p class="a-slog">Lorem ipsum dolor sit amet ne onsectetuer adipiscing elit. Aenean commodo ligula eget
               dolor in tashin ty</p>
           </div>
@@ -251,7 +325,7 @@ VERSION : 1.1
       <div class="container">
         <div class="row text-center">
           <div class="col-md-12">
-            <h3 class="title">Creative <span class="themecolor">Team</span></h3>
+            <h3 class="title">Our <span class="themecolor">Partners</span></h3>
             <p class="a-slog">Lorem ipsum dolor sit amet ne onsectetuer adipiscing elit. Aenean commodo ligula eget
               dolor in tashin ty</p>
           </div>
@@ -312,7 +386,7 @@ VERSION : 1.1
 
         <div class="row margin-top">
           <div class="col-md-12 text-center">
-            <a href="#" class="btn btn-custom theme_background_color ">We are Hiring</a>
+            <a href="#" class="btn btn-custom theme_background_color ">contact us</a>
           </div> <!-- /col -->
         </div> <!-- /row -->
 
@@ -366,7 +440,7 @@ VERSION : 1.1
                 <span class="stats" data-from="4763904" data-to="4764504" data-speed="5000"
                   data-refresh-interval="50"></span>
 
-                <h5>Total Downloaded</h5>
+                <h5>Projects completed</h5>
               </div>
             </div>
           </div>
@@ -378,7 +452,7 @@ VERSION : 1.1
               <div class="our-stat-info">
                 <span class="stats" data-from="1" data-to="504" data-speed="5000" data-refresh-interval="50"></span>
 
-                <h5>Editors Supported</h5>
+                <h5>Sectors worked In</h5>
               </div>
             </div>
           </div>
@@ -390,7 +464,7 @@ VERSION : 1.1
               <div class="our-stat-info">
                 <span class="stats" data-from="1" data-to="359" data-speed="5000" data-refresh-interval="50"></span>
 
-                <h5>Languages Detected</h5>
+                <h5>Years In Service</h5>
               </div>
             </div>
           </div>
