--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ VERSION : 1.1
   <link rel="stylesheet" type="text/css" href="css/responsive.css">
   <link rel="stylesheet" type="text/css" href="css/color/rose.css">
   <link rel="stylesheet" href="css/hover.css">
-  <link rel="stylesheet" href="form.css" >
+  <link rel="stylesheet" href="css/form.css" >
   <script src="form.js"></script>
 
 </head>
@@ -554,60 +554,44 @@ VERSION : 1.1
  ============================================================================================================================-->
     <!--sub-form-->
     <section class="sub-form text-center" id="eight">
-     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Contact Us
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel"></h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="container">
-          <div class="row">
-              <h1>contact us</h1>
-          </div>
-          <div class="row">
-              <h4 style="text-align:center">We'd love to hear from you!</h4>
-          </div>
-          <div class="row input-container">
-              <div class="col-xs-12">
-                <div class="styled-input wide">
-                  <input type="text" required />
-                  <label>Name</label> 
-                </div>
+      <div class="container">
+        <div class="row">
+            <h1>contact us</h1>
+        </div>
+        <div class="row">
+            <h4 style="text-align:center">We'd love to hear from you!</h4>
+        </div>
+        <div class="row input-container">
+            <div class="col-xs-12">
+              <div class="styled-input wide">
+                <input type="text" required />
+                <label>Name</label> 
               </div>
-              <div class="col-md-6 col-sm-12">
-                <div class="styled-input">
-                  <input type="text" required />
-                  <label>Email</label> 
-                </div>
+            </div>
+            <div class="col-md-6 col-sm-12">
+              <div class="styled-input">
+                <input type="text" required />
+                <label>Email</label> 
               </div>
-              <div class="col-md-6 col-sm-12">
-                <div class="styled-input" style="float:right;">
-                  <input type="text" required />
-                  <label>Phone Number</label> 
-                </div>
+            </div>
+            <div class="col-md-6 col-sm-12">
+              <div class="styled-input" style="float:right;">
+                <input type="text" required />
+                <label>Phone Number</label> 
               </div>
-              <div class="col-xs-12">
-                <div class="styled-input wide">
-                  <textarea required></textarea>
-                  <label>Message</label>
-                </div>
+            </div>
+            <div class="col-xs-12">
+              <div class="styled-input wide">
+                <textarea required></textarea>
+                <label>Message</label>
               </div>
-              <div class="col-xs-12">
-                <div class="btn-lrg submit-btn">Send Message</div>
-              </div>
-          </div>
+            </div>
+            <div class="col-xs-12">
+              <div class="btn-lrg submit-btn">Send Message</div>
+            </div>
         </div>
       </div>
-    </div>
-  </div>
-</div>
+      
     </section>
     <!--sub-form end-->
 
