added the new images

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ VERSION : 1.1
           <div class="col-md-3 col-sm-6">
             <div class="our-stats-box text-center">
               <div class="our-stat-icon">
-                <span class="fa fa-ge"></span>
+                <span><img src="https://img.icons8.com/ios-filled/60/ffffff/group-of-projects.png"/></span>
               </div>
               <div class="our-stat-info">
                 <span class="stats" data-from="1" data-to="206" data-speed="5000"
@@ -374,7 +374,7 @@ VERSION : 1.1
           <div class="col-md-3 col-sm-6">
             <div class="our-stats-box text-center">
               <div class="our-stat-icon">
-                <span class="fa fa-git-square"></span>
+                <span><img src="https://img.icons8.com/material-outlined/60/ffffff/business.png"/></span>
               </div>
               <div class="our-stat-info">
                 <span class="stats" data-from="1" data-to="4" data-speed="5000" data-refresh-interval="50"></span>
@@ -386,7 +386,7 @@ VERSION : 1.1
           <div class="col-md-3 col-sm-6">
             <div class="our-stats-box text-center">
               <div class="our-stat-icon">
-                <span class="fa fa-globe"></span>
+                <span> <img src="https://img.icons8.com/ios/60/ffffff/new-years-eve.png"/></span>
               </div>
               <div class="our-stat-info">
                 <span class="stats" data-from="1" data-to="5" data-speed="5000" data-refresh-interval="50"></span>
