text changes, removal of lorem ipsum

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ VERSION : 1.1
           <div class="row">
             <div class="main-heading-content col-md-12 col-sm-12 text-center">
               <h1 class="main-heading-title">We are<span class="main-element themecolor"
-                  data-elements="Web Developers,Creative,Ambitious,Visionaries, Business Analysts"></span></h1>
+                  data-elements="Web Developers,Creative,Ambitious,Visionaries,Business Analysts,Visionaire Digital"></span></h1>
               <p class="main-heading-text">Devoted to building software that changes our lives</p>
               <div class="btn-bar">
                 <a href="#" class="btn btn-custom theme_background_color">Ge Started</a>
@@ -142,24 +142,21 @@ VERSION : 1.1
             <div class="margin-bottom">
               <i class="fa fa-newspaper-o"></i>
               <h4>POWER OF FLEXIBILITY</h4>
-              <p class="black">Nulla vitae libero pharetra augue. Etiam porta malesuada magna mollis euismod consectetur
-                sem urdom tempus porttitor.</p>
+              <p class="black">Improving productivity, ability to adapt.</p>
             </div> <!-- / margin -->
           </div> <!-- /col -->
           <div class="col-sm-4 about-line text-center">
             <div class="margin-bottom">
               <i class="fa fa-diamond"></i>
               <h4>FULLY RESPONSIVE</h4>
-              <p class="black">Nulla vitae libero pharetra augue. Etiam porta malesuada magna mollis euismod consectetur
-                sem urdom tempus porttitor.</p>
+              <p class="black">Our code rescales itself to preserve user experience.</p>
             </div> <!-- / margin -->
           </div><!-- /col -->
           <div class="col-sm-4 text-center">
             <div class="margin-bottom">
               <i class="fa fa-area-chart"></i>
               <h4>GREAT WEB IDEAS</h4>
-              <p class="black">Nulla vitae libero pharetra augue. Etiam porta malesuada magna mollis euismod consectetur
-                sem urdom tempus porttitor.</p>
+              <p class="black">We are strategic in our development.</p>
             </div> <!-- / margin -->
           </div><!-- /col -->
         </div> <!-- /row -->
@@ -376,7 +373,7 @@ VERSION : 1.1
               <div class="our-stat-info">
                 <span class="stats" data-from="1" data-to="4" data-speed="5000" data-refresh-interval="50"></span>
 
-                <h5>Sectors worked In</h5>
+                <!-- <h5>Sectors worked In</h5>
               </div>
             </div>
           </div>
@@ -386,7 +383,7 @@ VERSION : 1.1
                 <span> <img src="https://img.icons8.com/ios/60/ffffff/new-years-eve.png"/></span>
               </div>
               <div class="our-stat-info">
-                <span class="stats" data-from="1" data-to="5" data-speed="5000" data-refresh-interval="50"></span>
+                <span class="stats" data-from="1" data-to="5" data-speed="5000" data-refresh-interval="50"></span> -->
 
                 <h5>Years In Service</h5>
               </div>
@@ -476,19 +473,7 @@ VERSION : 1.1
               <span><img src="https://img.icons8.com/material-outlined/48/000000/developer-mode.png"/></span>
               <div class="nim-service-detail">
                 <h4>Web Development</h4>
-                <p>Lorem ipsum dolor sit amet ne onsectetuer adipiscing elit. Aenean commodo ligula eget dolor in tashin
-                  ty dolor site amet ne onseceruter adipiscing</p>
-              </div> <!-- /nim-service-detail -->
-            </div> <!-- /nim-service margin-bottom -->
-          </div> <!-- /col -->
-
-          <div class="col-sm-4">
-            <div class="nim-service margin-bottom">
-              <span><img src="https://img.icons8.com/ios-glyphs/60/000000/web-design.png"/></span></i>
-              <div class="nim-service-detail">
-                <h4>Web Design</h4>
-                <p>Lorem ipsum dolor sit amet ne onsectetuer adipiscing elit. Aenean commodo ligula eget dolor in tashin
-                  ty dolor site amet ne onseceruter adipiscing</p>
+                <p>Development of static to complex code for the world wide web or private network</p>
               </div> <!-- /nim-service-detail -->
             </div> <!-- /nim-service margin-bottom -->
           </div> <!-- /col -->
@@ -498,67 +483,29 @@ VERSION : 1.1
               <span><img src="https://img.icons8.com/ios-glyphs/60/000000/design.png"/></span>
               <div class="nim-service-detail">
                 <h4>UI/UX Designs</h4>
-                <p>Lorem ipsum dolor sit amet ne onsectetuer adipiscing elit. Aenean commodo ligula eget dolor in tashin
-                  ty dolor site amet ne onseceruter adipiscing</p>
+                <p>Creation of user experience to maximise their use of the interface</p>
               </div> <!-- /nim-service-detail -->
             </div> <!-- /nim-service margin-bottom -->
           </div> <!-- /col -->
         </div>
-
-        <div class="row">
-          <div class="col-sm-4"> 
-            <div class="nim-service margin-bottom">
-              <span><img src="https://img.icons8.com/material-outlined/60/000000/brainstorm-skill.png"/></span>
-              <div class="nim-service-detail">
-                <h4>Strategy Solutions</h4>
-                <p>Lorem ipsum dolor sit amet ne onsectetuer adipiscing elit. Aenean commodo ligula eget dolor in tashin
-                  ty dolor site amet ne onseceruter adipiscing</p>
-              </div> <!-- /nim-service-detail -->
-            </div> <!-- /nim-service margin-bottom -->
-          </div> <!-- /col -->
-
-          <div class="col-sm-4">
-            <div class="nim-service margin-bottom">
-              <span><img src="https://img.icons8.com/material-outlined/60/000000/design--v1.png"/></span>
-              <div class="nim-service-detail">
-                <h4>Digital Design</h4>
-                <p>Lorem ipsum dolor sit amet ne onsectetuer adipiscing elit. Aenean commodo ligula eget dolor in tashin
-                  ty dolor site amet ne onseceruter adipiscing</p>
-              </div> <!-- /nim-service-detail -->
-            </div> <!-- /nim-service margin-bottom -->
-          </div> <!-- /col -->
 
           <div class="col-sm-4">
             <div class="nim-service margin-bottom">
               <span><img src="https://img.icons8.com/material-outlined/60/000000/hexagonal-pattern.png"/></span>
               <div class="nim-service-detail">
                 <h4>SEO</h4>
-                <p>Lorem ipsum dolor sit amet ne onsectetuer adipiscing elit. Aenean commodo ligula eget dolor in tashin
-                  ty dolor site amet ne onseceruter adipiscing</p>
+                <p>Improving the quality of traffic from the search engine</p>
               </div> <!-- /nim-service-detail -->
             </div> <!-- /nim-service margin-bottom -->
           </div> <!-- /col -->
         </div> <!-- end row -->
-
-        <div class="row">
-          <div class="col-sm-4">
-            <div class="nim-service margin-bottom">
-              <span><img src="https://img.icons8.com/ios-glyphs/60/000000/adobe-indesign.png"/></span>
-              <div class="nim-service-detail">
-                <h4>Graphic Design</h4>
-                <p>Lorem ipsum dolor sit amet ne onsectetuer adipiscing elit. Aenean commodo ligula eget dolor in tashin
-                  ty dolor site amet ne onseceruter adipiscing</p>
-              </div> <!-- /nim-service-detail -->
-            </div> <!-- /nim-service margin-bottom -->
-          </div> <!-- /col -->
 
           <div class="col-sm-4">
             <div class="nim-service margin-bottom">
               <span><img src="https://img.icons8.com/material-outlined/60/000000/bullish.png"/></span>
               <div class="nim-service-detail">
                 <h4>Analystics</h4>
-                <p>Lorem ipsum dolor sit amet ne onsectetuer adipiscing elit. Aenean commodo ligula eget dolor in tashin
-                  ty dolor site amet ne onseceruter adipiscing</p>
+                <p>Reporting of web data to understand the usage to improve web effectiveness</p>
               </div> <!-- /nim-service-detail -->
             </div> <!-- /nim-service margin-bottom -->
           </div> <!-- /col -->
@@ -568,8 +515,7 @@ VERSION : 1.1
               <span><img src="https://img.icons8.com/ios-glyphs/60/000000/omnichannel.png"/></span>
               <div class="nim-service-detail">
                 <h4>Dedicated Support</h4>
-                <p>Lorem ipsum dolor sit amet ne onsectetuer adipiscing elit. Aenean commodo ligula eget dolor in tashin
-                  ty dolor site amet ne onseceruter adipiscing</p>
+                <p>Providing expert assistance to help with services and products</p>
               </div> <!-- /nim-service-detail -->
             </div> <!-- /nim-service margin-bottom -->
           </div> <!-- /col -->
