edited the neccessary files

--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@ VERSION : 1.1
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
+            <!-- <a class="navbar-brand" href="index.html">V<span class="themecolor">i</span>D</a> -->
           </button>
-          <a class="navbar-brand" href="index.html">V<span class="themecolor">i</span>D</a>
+          <a class="navbar-brand" href="index.html"> <img class="nav-img" src="images/Visionaire white.png" alt="" srcset=""> </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -109,7 +110,7 @@ VERSION : 1.1
                   data-elements="Web Developers,Creative,Ambitious,Visionaries,Business Analysts,Visionaire Digital"></span></h1>
               <p class="main-heading-text">Devoted to building software that changes our lives</p>
               <div class="btn-bar">
-                <a href="#" class="btn btn-custom theme_background_color">Ge Started</a>
+                <!-- <a href="#" class="btn btn-custom theme_background_color">GET STARTED</a> -->
                 <a href="#" class="btn btn-custom-outline">Contact Us</a>
               </div>
             </div>
@@ -456,61 +457,62 @@ VERSION : 1.1
     <!-- [/SERVICES]
  ============================================================================================================================-->
 
+ <section class="services white-background black" id="seven">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-md-12">
+          <h3 class="title">We Are <span class="themecolor">Good In</span></h3>
+        <p class="a-slog"></p>
+      </div> <!-- /col -->
+    </div> <!-- /row -->
+    <div class="gap"></div>
 
-    <section class="services white-background black" id="seven">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col-md-12">
-            <h3 class="title">We <span class="themecolor">Offer</span></h3>
-            <p class="a-slog"></p>
-          </div> <!-- /col -->
-        </div> <!-- /row -->
-        <div class="gap"></div>
+    <div class="row">
+      <div class="col-sm-4">
+        <div class="nim-service margin-bottom">
+          <span><img src="https://img.icons8.com/material-outlined/48/000000/developer-mode.png"/></span>
+          <div class="nim-service-detail">
+            <h4>Web Development</h4>
+            <p>Development of static to complex code for the world wide web or private network</p>
+          </div> <!-- /nim-service-detail -->
+        </div> <!-- /nim-service margin-bottom -->
+      </div> <!-- /col -->
 
-        <div class="row">
-          <div class="col-sm-4">
-            <div class="nim-service margin-bottom">
-              <span><img src="https://img.icons8.com/material-outlined/48/000000/developer-mode.png"/></span>
-              <div class="nim-service-detail">
-                <h4>Web Development</h4>
-                <p>Development of static to complex code for the world wide web or private network</p>
-              </div> <!-- /nim-service-detail -->
-            </div> <!-- /nim-service margin-bottom -->
-          </div> <!-- /col -->
 
-          <div class="col-sm-4">
-            <div class="nim-service margin-bottom">
-              <span><img src="https://img.icons8.com/ios-glyphs/60/000000/design.png"/></span>
-              <div class="nim-service-detail">
-                <h4>UI/UX Designs</h4>
-                <p>Creation of user experience to maximise their use of the interface</p>
-              </div> <!-- /nim-service-detail -->
-            </div> <!-- /nim-service margin-bottom -->
-          </div> <!-- /col -->
-        </div>
+      <div class="col-sm-4">
+        <div class="nim-service margin-bottom">
+          <span><img src="https://img.icons8.com/material-outlined/60/000000/hexagonal-pattern.png"/></span>
+          <div class="nim-service-detail">
+            <h4>SEO</h4>
+            <p>Improving the quality of traffic from the search engine</p>
+          </div> <!-- /nim-service-detail -->
+        </div> <!-- /nim-service margin-bottom -->
+      </div> <!-- /col -->
 
-          <div class="col-sm-4">
-            <div class="nim-service margin-bottom">
-              <span><img src="https://img.icons8.com/material-outlined/60/000000/hexagonal-pattern.png"/></span>
-              <div class="nim-service-detail">
-                <h4>SEO</h4>
-                <p>Improving the quality of traffic from the search engine</p>
-              </div> <!-- /nim-service-detail -->
-            </div> <!-- /nim-service margin-bottom -->
-          </div> <!-- /col -->
-        </div> <!-- end row -->
+      <div class="col-sm-4">
+        <div class="nim-service margin-bottom">
+          <span><img src="https://img.icons8.com/material-outlined/60/000000/bullish.png"/></span>
+          <div class="nim-service-detail">
+            <h4>Analystics</h4>
+            <p>Reporting of web data to understand the usage to improve web effectiveness</p>
+          </div> <!-- /nim-service-detail -->
+        </div> <!-- /nim-service margin-bottom -->
+      </div> <!-- /col -->
+    </div> <!-- end row -->
 
-          <div class="col-sm-4">
-            <div class="nim-service margin-bottom">
-              <span><img src="https://img.icons8.com/material-outlined/60/000000/bullish.png"/></span>
-              <div class="nim-service-detail">
-                <h4>Analystics</h4>
-                <p>Reporting of web data to understand the usage to improve web effectiveness</p>
-              </div> <!-- /nim-service-detail -->
-            </div> <!-- /nim-service margin-bottom -->
-          </div> <!-- /col -->
+    <div class="row2">
+      <div class="col-sm-4">
+        <div class="nim-service margin-bottom">
+          <span><img src="https://img.icons8.com/ios-glyphs/60/000000/omnichannel.png"/></span>
+          <div class="nim-service-detail">
+            <h4>Dedicated Support</h4>
+            <p>Providing expert assistance to help with services and products</p>
+          </div> <!-- /nim-service-detail -->
+        </div> <!-- /nim-service margin-bottom -->
+      </div> <!-- /col -->
 
-          <div class="col-sm-4">
+
+        <div class="col-sm-4">
             <div class="nim-service margin-bottom">
               <span><img src="https://img.icons8.com/ios-glyphs/60/000000/omnichannel.png"/></span>
               <div class="nim-service-detail">
@@ -518,11 +520,41 @@ VERSION : 1.1
                 <p>Providing expert assistance to help with services and products</p>
               </div> <!-- /nim-service-detail -->
             </div> <!-- /nim-service margin-bottom -->
-          </div> <!-- /col -->
-        </div> <!-- end row -->
-      </div> <!-- container -->
-    </section>
+          </div> <!-- /col -->                      
+    </div> <!-- end row -->
 
+  </div>  <!-- container -->
+</section>
+
+
+<!-- [/SERVICES]
+============================================================================================================================-->
+
+
+<!-- [CONTACT]
+============================================================================================================================-->
+<!--sub-form-->
+<!-- <section class="sub-form text-center" id="eight">
+<div class="container">
+<div class="col-md-12">
+    <h3 class="title">Subscribe to our <span class="themecolor"> News letter</span></h3>
+        <p class="lead">Lorem ipsum dolor sit amet ne onsectetuer adipiscing elit. Aenean commodo ligula eget dolor in tashin ty</p>
+</div> 
+<div class="row">
+    <div class="col-md-3 col-sm-3"></div>
+  <div class="col-md-6 center-block col-sm-6 ">
+    <form id="mc-form">
+      <div class="input-group">
+        <input type="email" class="form-control" placeholder="Email Address" required id="mc-email">
+        <span class="input-group-btn">
+        <button type="submit" class="btn btn-default">SUBSCRIBE <i class="fa fa-envelope"></i> </button>
+        </span> </div>
+      <label for="mc-email" id="mc-notification"></label>
+    </form>
+  </div>
+</div>
+</div>
+</section> -->
 
     <!-- [/SERVICES]
  ============================================================================================================================-->
