finished all cprrections

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ VERSION : 1.1
  ============================================================================================================================-->
     <section class="our-stats" id="five">
       <div class="middle"><div class="container">
-        <div class="row">
+        <div class="row2 row">
           <div class="col-md-3 col-sm-6">
             <div class="our-stats-box text-center">
               <div class="our-stat-icon">
@@ -366,7 +366,7 @@ VERSION : 1.1
               </div>
             </div>
           </div>
-          <div class="col-md-3 col-sm-6">
+          <!-- <div class="col-md-3 col-sm-6">
             <div class="our-stats-box text-center">
               <div class="our-stat-icon">
                 <span><img src="https://img.icons8.com/material-outlined/60/ffffff/business.png"/></span>
@@ -374,17 +374,17 @@ VERSION : 1.1
               <div class="our-stat-info">
                 <span class="stats" data-from="1" data-to="4" data-speed="5000" data-refresh-interval="50"></span>
 
-                <!-- <h5>Sectors worked In</h5>
-              </div>
+                <h5>Sectors worked In</h5>
+              ` </div>
             </div>
-          </div>
+          </div> -->
           <div class="col-md-3 col-sm-6">
             <div class="our-stats-box text-center">
               <div class="our-stat-icon">
                 <span> <img src="https://img.icons8.com/ios/60/ffffff/new-years-eve.png"/></span>
               </div>
               <div class="our-stat-info">
-                <span class="stats" data-from="1" data-to="5" data-speed="5000" data-refresh-interval="50"></span> -->
+                <span class="stats" data-from="1" data-to="5" data-speed="5000" data-refresh-interval="50"></span>
 
                 <h5>Years In Service</h5>
               </div>
@@ -514,10 +514,10 @@ VERSION : 1.1
 
         <div class="col-sm-4">
             <div class="nim-service margin-bottom">
-              <span><img src="https://img.icons8.com/ios-glyphs/60/000000/omnichannel.png"/></span>
+              <span><img src="https://img.icons8.com/material-rounded/60/000000/web-design.png"/></span>
               <div class="nim-service-detail">
-                <h4>Dedicated Support</h4>
-                <p>Providing expert assistance to help with services and products</p>
+                <h4>UI/UX</h4>
+                <p>Creation of user experience to maximize their use of the interface.</p>
               </div> <!-- /nim-service-detail -->
             </div> <!-- /nim-service margin-bottom -->
           </div> <!-- /col -->                      
